--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 <body>
     <!-- React Root for App.tsx -->
-    <div id="react-root" class="fixed inset-0 z-[9999] pointer-events-none"></div>
+    <div id="react-root" class="fixed inset-0 z-[9999]"></div>
 
     <!-- Animated Voice Wave Background -->
     <canvas id="voiceWaveCanvas"></canvas>
@@ -339,7 +339,9 @@
                     </h1>
 
                     <p class="text-xl text-gray-600 mb-8 leading-relaxed font-light max-w-lg">
-                        <strong class="text-black font-semibold">Your AI receptionist answers incoming calls 24/7, books appointments directly on your calendar, and can schedule, reschedule, or cancel appointments.</strong> Set up in 1 week. Never miss another call.
+                        <strong class="text-black font-semibold">Your AI receptionist answers incoming calls 24/7, books
+                            appointments directly on your calendar, and can schedule, reschedule, or cancel
+                            appointments.</strong> Set up in 1 week. Never miss another call.
                     </p>
 
                     <!-- The Features - Quick Hits -->
@@ -349,7 +351,8 @@
                             <div class="text-[9px] text-gray-500 uppercase tracking-widest mt-1">Answers Calls</div>
                         </div>
                         <div class="text-center p-4 bg-green-50 border border-green-100 rounded-lg">
-                            <div class="text-success font-mono text-xl font-bold"><i class="fa-solid fa-calendar-check"></i></div>
+                            <div class="text-success font-mono text-xl font-bold"><i
+                                    class="fa-solid fa-calendar-check"></i></div>
                             <div class="text-[9px] text-gray-500 uppercase tracking-widest mt-1">Books Calendar</div>
                         </div>
                         <div class="text-center p-4 bg-green-50 border border-green-100 rounded-lg">
@@ -391,7 +394,8 @@
                             <h2 class="text-2xl font-bold text-black mb-3 tracking-tight">Try The AI Receptionist
                             </h2>
                             <p class="text-sm text-gray-500 leading-relaxed">
-                                Fill this out and talk to the AI instantly. Try booking an appointment, rescheduling, or asking about services.
+                                Fill this out and talk to the AI instantly. Try booking an appointment, rescheduling, or
+                                asking about services.
                             </p>
                         </div>
 
@@ -627,7 +631,8 @@
                         </div>
                         <h3 class="text-xl font-bold mb-3">Start Capturing Revenue</h3>
                         <p class="text-gray-400 text-sm leading-relaxed">
-                            AI goes live. Answers every call 24/7. Books, reschedules, and cancels appointments directly on your calendar.
+                            AI goes live. Answers every call 24/7. Books, reschedules, and cancels appointments directly
+                            on your calendar.
                         </p>
                         <div class="mt-6 pt-6 border-t border-white/10">
                             <span class="text-[10px] font-mono text-gray-500 uppercase tracking-widest">Setup: 1
@@ -641,7 +646,10 @@
             <div class="bg-success/10 border border-success/20 p-8 text-center rounded-lg">
                 <h3 class="text-2xl font-bold mb-4 text-success">What You Get</h3>
                 <p class="text-lg text-gray-300 max-w-2xl mx-auto">
-                    An AI receptionist that answers <strong class="text-white">every incoming call 24/7</strong>, books appointments directly on your calendar, and can <strong class="text-white">schedule, reschedule, or cancel</strong> appointments automatically. Setup takes just <strong class="text-white">1 week</strong>.
+                    An AI receptionist that answers <strong class="text-white">every incoming call 24/7</strong>, books
+                    appointments directly on your calendar, and can <strong class="text-white">schedule, reschedule, or
+                        cancel</strong> appointments automatically. Setup takes just <strong class="text-white">1
+                        week</strong>.
                 </p>
             </div>
 
@@ -953,7 +961,8 @@
                             class="w-16 h-16 bg-black border-4 border-white rounded-full flex items-center justify-center text-xl font-bold mx-auto mb-4">
                             2</div>
                         <h3 class="text-xl font-bold">We Build Your AI Agent</h3>
-                        <p class="text-gray-400 text-sm mt-2">We train the AI on your business, services, pricing, and calendar to handle scheduling, rescheduling, and cancellations.</p>
+                        <p class="text-gray-400 text-sm mt-2">We train the AI on your business, services, pricing, and
+                            calendar to handle scheduling, rescheduling, and cancellations.</p>
                         <div class="mt-2 text-[10px] font-mono text-success uppercase tracking-widest">Days 2-6
                         </div>
                     </div>
@@ -965,7 +974,8 @@
                             <i class="fa-solid fa-check"></i>
                         </div>
                         <h3 class="text-xl font-bold text-success">You Go Live</h3>
-                        <p class="text-gray-400 text-sm mt-2">Forward your calls. Done. You're now open 24/7 with full appointment management.</p>
+                        <p class="text-gray-400 text-sm mt-2">Forward your calls. Done. You're now open 24/7 with full
+                            appointment management.</p>
                         <div class="mt-2 text-[10px] font-mono text-success uppercase tracking-widest">Day 7
                         </div>
                     </div>
@@ -1028,8 +1038,7 @@
     <section id="pricing" class="py-24 bg-black text-white">
         <div class="max-w-7xl mx-auto px-6 md:px-8">
             <div class="text-center mb-16">
-                <span
-                    class="text-[10px] font-mono font-bold uppercase tracking-[0.3em] text-success mb-4 block">Simple
+                <span class="text-[10px] font-mono font-bold uppercase tracking-[0.3em] text-success mb-4 block">Simple
                     Pricing</span>
                 <h2 class="text-4xl md:text-5xl font-bold tracking-tight mb-6">Two Plans. Clear Value.</h2>
                 <p class="text-gray-400 text-lg max-w-2xl mx-auto">
@@ -1049,11 +1058,16 @@
                     <ul class="space-y-4 text-sm text-gray-300 mb-8">
                         <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> 24/7 Call
                             Answering</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Schedule Appointments on Calendar</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Reschedule Appointments</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Cancel Appointments</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Answer FAQs (Hours, Pricing, Services)</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> 1 Week Setup Time</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Schedule
+                            Appointments on Calendar</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Reschedule
+                            Appointments</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Cancel
+                            Appointments</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Answer FAQs
+                            (Hours, Pricing, Services)</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> 1 Week Setup
+                            Time</li>
                     </ul>
                     <button id="price-starter-demo"
                         class="block w-full py-4 border border-white/20 text-center font-bold uppercase tracking-widest text-xs hover:bg-white hover:text-black transition-all pointer-events-auto">Get
@@ -1075,11 +1089,16 @@
                         <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i>
                             <strong>Everything in Essential</strong>
                         </li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Daily AI Reminder Calls to Customers</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Confirms Appointments Automatically</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Frees Up Calendar Slots from No-Shows</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Reduces No-Show Rate by 80%+</li>
-                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Priority Support</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Daily AI
+                            Reminder Calls to Customers</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Confirms
+                            Appointments Automatically</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Frees Up
+                            Calendar Slots from No-Shows</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Reduces
+                            No-Show Rate by 80%+</li>
+                        <li class="flex items-center gap-3"><i class="fa-solid fa-check text-success"></i> Priority
+                            Support</li>
                     </ul>
                     <button id="price-growth-demo"
                         class="block w-full py-4 bg-black text-white text-center font-bold uppercase tracking-widest text-xs hover:bg-gray-800 transition-all shadow-lg pointer-events-auto">Get
@@ -1095,6 +1114,112 @@
             <h2 class="text-3xl font-bold text-center mb-12">Ready to Start? Book a Strategy Call</h2>
             <div style="width:100%;height:600px;overflow:scroll;border-radius:12px;border:1px solid rgba(0,0,0,0.1);background:#fff;"
                 id="my-cal-inline-30min"></div>
+        </div>
+    </section>
+
+    <!-- FAQ SECTION -->
+    <section class="py-24 bg-offwhite border-b border-gray-100">
+        <div class="max-w-4xl mx-auto px-6 md:px-8">
+            <div class="text-center mb-16">
+                <span class="text-[10px] font-mono font-bold uppercase tracking-[0.3em] text-gray-400 mb-4 block">Common
+                    Questions</span>
+                <h2 class="text-3xl md:text-4xl font-bold tracking-tight">Everything You Need To Know</h2>
+            </div>
+
+            <div class="space-y-4">
+                <!-- Question 1 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">What is the AI receptionist?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Sophie is a voice-powered AI receptionist that answers your business calls 24/7, handles
+                        appointment scheduling, answers common questions, and captures caller information—so you never
+                        miss a lead.
+                    </p>
+                </div>
+
+                <!-- Question 2 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">What types of businesses is this for?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        We specialize in serving local service businesses in North Jersey, including law firms, dental
+                        practices, and HVAC companies.
+                    </p>
+                </div>
+
+                <!-- Question 3 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">How much does it cost?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        We offer two tiers: a Basic AI Receptionist at $500/month, and a Premium tier with proactive
+                        appointment reminders and advanced features at $1,000/month plus a one-time setup fee.
+                    </p>
+                </div>
+
+                <!-- Question 4 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">Can the AI schedule appointments?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Yes. Sophie integrates with Google Calendar to book, reschedule, and confirm appointments in
+                        real time during the call.
+                    </p>
+                </div>
+
+                <!-- Question 5 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">Do you provide a CRM?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Yes. Every plan includes access to our built-in CRM where you can view all your leads, call
+                        history, and caller details in one place. You'll have full visibility into every interaction
+                        Sophie handles.
+                    </p>
+                </div>
+
+                <!-- Question 6 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">Can Sophie integrate with my existing CRM?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Absolutely. We can connect Sophie to most popular CRMs including Salesforce, HubSpot, Zoho, Clio
+                        (for law firms), and others. Lead information and call summaries can be automatically pushed to
+                        your system so your workflow stays seamless.
+                    </p>
+                </div>
+
+                <!-- Question 7 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">What happens after each call?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        You receive detailed call summaries and lead information. Our premium tier includes post-call
+                        analytics and business intelligence reporting.
+                    </p>
+                </div>
+
+                <!-- Question 8 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">Does it really sound like a human?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Sophie is built on advanced voice AI technology and trained specifically for your industry.
+                        Callers often can't tell they're speaking with an AI.
+                    </p>
+                </div>
+
+                <!-- Question 9 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">How quickly can I get started?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Most businesses are live within a few days. We handle all the setup, including customizing
+                        Sophie's knowledge base and integrating with your calendar, CRM, and workflows.
+                    </p>
+                </div>
+
+                <!-- Question 10 -->
+                <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
+                    <h3 class="font-bold text-lg mb-2">What if the AI can't answer a question?</h3>
+                    <p class="text-gray-600 text-sm leading-relaxed">
+                        Sophie is trained to gracefully handle edge cases—she'll capture the caller's details and ensure
+                        you can follow up personally.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
