Fix bug where website buttons were unclickable

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 <body>
     <!-- React Root for App.tsx -->
-    <div id="react-root" class="fixed inset-0 z-[9999]"></div>
+    <div id="react-root" class="fixed inset-0 z-[9999] pointer-events-none"></div>
 
     <!-- Animated Voice Wave Background -->
     <canvas id="voiceWaveCanvas"></canvas>
