--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
 
             <!-- CTA Button -->
             <div class="mt-12 text-center hiw-fade-up hiw-delay-5">
-                <button id="how-works-try-demo"
+                <a href="#book-call"
                     class="inline-flex items-center gap-3 px-8 py-4 bg-white text-black font-semibold text-sm uppercase tracking-wider hover:bg-gray-200 transition-all pointer-events-auto group">
                     <span>Book Discovery Call</span>
                     <svg class="w-4 h-4 transition-transform group-hover:translate-x-1" fill="none"
@@ -780,7 +780,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M17 8l4 4m0 0l-4 4m4-4H3" />
                     </svg>
-                </button>
+                </a>
             </div>
         </div>
     </section>
@@ -1434,7 +1434,7 @@
     </section>
 
     <!-- CAL.COM EMBED (FOOTER) -->
-    <section class="py-24 bg-gray-50 border-t border-black/5">
+    <section id="book-call" class="py-24 bg-gray-50 border-t border-black/5">
         <div class="max-w-4xl mx-auto px-6">
             <h2 class="text-3xl font-bold text-center mb-12">Ready to Start? Book a Strategy Call</h2>
             <div style="width:100%;height:600px;overflow:scroll;border-radius:12px;border:1px solid rgba(0,0,0,0.1);background:#fff;"
